applications/tic-tac-toe/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tic-tac-toe

spec:
  selector:
    app: tic-tac-toe

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001

  type: LoadBalancer
