applications/tic-tac-toe/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tic-tac-toe-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /tic-tac-toe(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: tic-tac-toe
                port:
                  number: 80
